# Keira

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml
.storybook/: main.ts  manager.ts  preview.ts
api/: __init__.py  config.py  main.py  models.py  requirements.txt  state.py
api/routes/: __init__.py  frame.py  health.py  process.py  upload.py  video.py
api/services/: __init__.py  ffmpeg.py  processing.py
api/tests/: conftest.py  test_health.py  test_upload.py  test_video.py
e2e/: app.spec.ts
launchers/: Create-Desktop-Shortcuts.vbs  Keira-GUI.vbs  Stop-All.vbs
scripts/: kill-port.cjs
src/: App.test.tsx.disabled  App.tsx  index.css  main.tsx  sanity.test.ts
src/components/: ErrorBoundary.tsx  LazyComponents.tsx  MaskEditor.tsx  ProcessingView.tsx  ROISelector.tsx  SuspenseFallback.tsx  VideoUpload.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  DropZone.tsx  GlassCard.tsx  GlassPanel.tsx  (+9 more)
src/constants/: api.ts  index.ts  ui.ts  video.ts
src/hooks/: index.ts  useAsyncAction.ts  useDebounce.ts  useHotkey.ts  useKeyboardShortcuts.ts  useMaskBrush.ts  useMaskCanvas.ts  useProcessingJob.ts
src/services/: index.ts
src/store/: index.ts  useAppStore.test.ts  useAppStore.ts
src/stories/: Introduction.mdx
src/types/: index.ts
src/utils/: canvas.ts  index.ts  validation.ts
worker/: inpaint_worker.py  requirements.txt
(+11 files in other folders)
